--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,12 @@
 {
 	background: red;
 	width: 33.33%;
-	
 	color:white;
 	font-size: 20px;
 	text-align: center;
-	line-height: 100px;
+	padding:20px;
+	box-sizing: border-box;
+	
 }
 
 #instructionsbox
